syntax = "proto3";

import "google/type/date.proto";
import "protobuf/java/type/Money.proto";

package piggymetrics.account;

option java_package = "com.github.galleog.piggymetrics.exchange.grpc";
option java_outer_classname = "ExchangeServiceProto";

// Request to convert a money amount to another currency.
message ConvertRequest {
    // Required. Money amount to convert.
    protobuf.java.type.Money money = 1;
    // Required. Code of the currency to convert the money amount to.
    string currency_code = 2;
}

// Service for currency exchange
service ExchangeService {
    // Converts the specified money amount to another currency.
    rpc Convert (stream ConvertRequest) returns (stream protobuf.java.type.Money);
}